[package]
name = "pyn"
description = "A wrapper for the JavaScript package managers: npm, pnpm, and Yarn"
license = "MIT"
version = "0.4.0"
authors = ["mitchellhamilton <mitchell@hamil.town>"]
homepage = "https://github.com/Thinkmill/pyn"
repository = "https://github.com/Thinkmill/pyn"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0"
serde_json = {version = "1.0.64", features=["preserve_order"]}
serde = { version = "1.0.125", features = ["derive"] }
displaydoc = "0.2"
linked-hash-map = {version="0.5.4",features=["serde_impl"]}
structopt = {version = "0.3"}
reqwest = { version = "0.11.3", features=["blocking", "json"] }
serde_yaml = "0.8"
ignore = "0.4.18"
dialoguer = "0.8"

